--- a/manual.html
+++ b/manual.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <div id="wrapper">
-        <h1>WWA Wing: 簡易マニュアル (ver. W3.13b+)</h1>
+        <h1>WWA Wing: 簡易マニュアル (ver. W3.13b++)</h1>
         <p><a href="http://wwawing.com">WWA Wing</a>( WWA In the Next Generation )は、<a href="http://wwajp.com">WWA</a>のJavaScript実装です。
         煩わしい警告は出ず、一部のスマートフォンでも動作します。
         正式なマニュアルは後ほどのリリースに添付予定です。</p>
@@ -106,9 +106,10 @@
             <li>ランダム選択パーツ</li>
         </ul>
         <p>WWA作成ツールは作者NAO氏の許可を得て再配布しております。また、WWA Debuggerは作者Aruneko氏の許可を得て再配布しております。</p>
-        <h2>W3.13bからW3.13b+への変更点</h2>
+        <h2>W3.13bからW3.13b++への変更点</h2>
         <ul>
-            <li>戦闘が1フレームで終了する場合に戦闘ウィンドウが出ない問題を修正。</li>
+            <li>物を売るパーツによりゲームオーバーになった時にメッセージウィンドウが消えない不具合を修正。</li>
+            <li>戦闘が1フレームで終了する場合に戦闘ウィンドウが出ない問題を修正(W3.13bで修正)。</li>
         </ul>
         <h2>W3.13aからW3.13bへの変更点</h2>
         <ul>
