modify: manual.html を CC BYにした

--- a/manual.html
+++ b/manual.html
@@ -42,7 +42,7 @@
         正式なマニュアルは後ほどのリリースに添付予定です。</p>
 
         <h2>サーバにアップロードするファイルについて</h2>
-        <p>下記の通りです。</p>
+        <p>下記の通りです。（下記のフォルダ構成は、通常配布版のzipファイルを解凍したものです）</p>
         <pre>
             +--+mapdata
                +--+audio (フォルダ) - フォルダごとアップロードすることを強くおすすめします。
@@ -170,6 +170,15 @@
         </ul>
 
         <footer>
+            <h2>ライセンス情報</h2>
+            <p>WWA Wingのソースコードの使用の制限については<a href="./LICENSE">MIT License</a>とします。</p>
+            <p>ただし、同梱されているマップデータファイル「caves01.dat」「caves02.dat」 「island02.dat」「wwamap.dat」、
+            ゲーム中で使用される画像の内「caves01.gif」「caves02.gif」「island02.gif」「making.gif」「mapcg.gif」および
+            WWA作成ツールに関しての著作権は原作者NAO氏が保持し、取り扱いについては<a href="http://wwawing.com">キャラバンサークル</a>
+            で定める通りとし、WWA Debuggerの実行ファイルおよびインストーラのバッチファイルに関しての著作権は、原作者Aruneko氏および
+            アイコン制作者プチ氏が保持し、取り扱いについては同梱しているWWA Debuggerの説明文書によるものとします。</p>
+            <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/deed.ja"><img alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a><br />
+            また、このマニュアルについては <a rel="license" href="http://creativecommons.org/licenses/by/4.0/deed.ja">クリエイティブ・コモンズ 表示 4.0 国際 ライセンスの下に提供されています。</a></p>
             <p> Internet RPG &quot;<a href="http://www.wwajp.com">World Wide Adventure</a>&quot; &copy;1996-2015 NAO</p>
             <p> &quot;<a href="http://wwawing.com/">WWA Wing</a>&quot; &copy;2013-2015 Project Wing/Matsuyuki(rmn.)</p>
         </footer>
