--- a/manual.html
+++ b/manual.html
@@ -106,10 +106,14 @@
             <li>ランダム選択パーツ</li>
         </ul>
         <p>WWA作成ツールは作者NAO氏の許可を得て再配布しております。また、WWA Debuggerは作者Aruneko氏の許可を得て再配布しております。</p>
-        <h2>W3.13bからW3.13b++への変更点</h2>
+        <h2>W3.13bからW3.13cへの変更点</h2>
         <ul>
-            <li>物を売るパーツによりゲームオーバーになった時にメッセージウィンドウが消えない不具合を修正。</li>
-            <li>戦闘が1フレームで終了する場合に戦闘ウィンドウが出ない問題を修正(W3.13bで修正)。</li>
+            <li>WWAが設置されているページで、WWAより上の要素にCSSでスタイルを指定した場合に、メッセージのレイアウトが崩れる問題を修正。</li>
+            <li>戦闘予測ウィンドウにも$colorを適用するように変更。</li>
+            <li>メッセージ中の&lt;C&gt;,&lt;P&gt;タグの挙動を原作通りに修正。</li>
+            <li>一部メッセージウィンドウのスタイルを修正。</li>
+            <li>物を売るパーツによりゲームオーバーになった時にメッセージウィンドウが消えない不具合を修正(W3.13b++で修正)。</li>
+            <li>戦闘が1フレームで終了する場合に戦闘ウィンドウが出ない問題を修正(W3.13b+で修正)。</li>
         </ul>
         <h2>W3.13aからW3.13bへの変更点</h2>
         <ul>
