Add: LICENSE -> __DISTRIBUTE__

--- a/manual.html
+++ b/manual.html
@@ -162,15 +162,16 @@
 
         <h2>次回予定</h2>
         <ul>
-            <li>メッセージ末尾に空行がある場合の処理方法見直し</li>
-            <li>パスワードセーブ, SuperQuickSave（仮）</li>
+            <li>パスワードセーブ</li>
             <li>超高速戦闘</li>
         </ul>
         <h2>遠くない未来に更新予定</h2>
         <ul>
+            <li>SuperQuickSave(仮)</li>
             <li>スコア表示Twitter連携機能</li>
             <li>スマートフォン・タブレット向けゲームパッド</li>
             <li>スマートフォン・タブレット向けviewport設定</li>
+            <li>その他、提案された多数の新機能</li>
         </ul>
 
         <footer>
