WIP: password save

--- a/test.html
+++ b/test.html
@@ -10,6 +10,7 @@
 
     <!--  WWA requirements-->
     <link rel="stylesheet" href="wwa.css" type="text/css" />
+    <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/aes.js"></script>
     <script src="audio/audio.min.js"></script>
     <script src="wwa.long.js"></script>
     <!-- /WWA requirements -->
