--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <h2>使用ライブラリ</h2>
         <ul>
             <li><a href="http://kolber.github.io/audiojs/">audio.js</a>(<a href="./audio/LICENSE.txt">ライセンス情報</a>)</li>
+            <li><a href="https://code.google.com/p/crypto-js/">CryptoJS</a>(<a href="https://code.google.com/p/crypto-js/wiki/License">ライセンス情報</a>)</li>
         </ul>
         <p> Internet RPG &quot;<a href="http://www.wwajp.com">World Wide Adventure</a>&quot; &copy;1996-2015 NAO</p>
         <p> &quot;<a href="http://wwawing.com/">WWA Wing</a>&quot; &copy;2013-2015 Project Wing/Matsuyuki(rmn.)</p>
