--- a/caves01.html
+++ b/caves01.html
@@ -10,6 +10,7 @@
 
     <!--  WWA requirements-->
     <link rel="stylesheet" href="wwa.css" type="text/css" />
+    <script src="cryptojs/aes.js"></script>
     <script src="audio/audio.min.js"></script>
     <script src="wwa.long.js"></script>
     <!-- /WWA requirements -->
