--- a/manual.html
+++ b/manual.html
@@ -106,6 +106,13 @@
             <li>ランダム選択パーツ</li>
         </ul>
         <p>WWA作成ツールは作者NAO氏の許可を得て再配布しております。また、WWA Debuggerは作者Aruneko氏の許可を得て再配布しております。</p>
+        <h2>W3.13cからW3.14への変更点</h2>
+        <ul>
+            <li>パスワードセーブを実装(Java版との互換なし)</li>
+            <li>ジャンプゲート後に表示される画面領域を原作準拠に変更。</li>
+            <li>「物を売る」パーツで物体パーツ番号0番を売る場合の挙動を原作準拠に変更。</li>
+            <li>「物を売る」パーツの結果、アイテムが持てない場合、システムメッセージが反映されない不具合を修正。</li>
+        </ul>
         <h2>W3.13bからW3.13cへの変更点</h2>
         <ul>
             <li>WWAが設置されているページで、WWAより上の要素にCSSでスタイルを指定した場合に、メッセージのレイアウトが崩れる問題を修正。</li>
