--- a/manual.html
+++ b/manual.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <div id="wrapper">
-        <h1>WWA Wing: 簡易マニュアル (ver. W3.14)</h1>
+        <h1>WWA Wing: 簡易マニュアル (ver. W3.14+)</h1>
         <p><a href="http://wwawing.com">WWA Wing</a>( WWA In the Next Generation )は、<a href="http://wwajp.com">WWA</a>のJavaScript実装です。
         煩わしい警告は出ず、一部のスマートフォンでも動作します。
         正式なマニュアルは後ほどのリリースに添付予定です。</p>
@@ -97,8 +97,6 @@
         <p>現在、下記の機能の実装はありません。</p>
         <ul>
             <li>アイテムエフェクト, マクロ$effitem</li>
-            <li>パスワードの出力</li>
-            <li>パスワードの読み込み</li>
         </ul>
         <p>下記の機能は本家とは異なる挙動をすることがあります。</p>
         <ul>
@@ -106,12 +104,17 @@
             <li>ランダム選択パーツ</li>
         </ul>
         <p>WWA作成ツールは作者NAO氏の許可を得て再配布しております。また、WWA Debuggerは作者Aruneko氏の許可を得て再配布しております。</p>
-        <h2>W3.13bからW3.13cへの変更点</h2>
+        <h2>W3.14からW3.14+への変更点</h2>
         <ul>
-            <li>WWAが設置されているページで、WWAより上の要素にCSSでスタイルを指定した場合に、メッセージのレイアウトが崩れる問題を修正。</li>
-            <li>戦闘予測ウィンドウにも$colorを適用するように変更。</li>
-            <li>メッセージ中の&lt;C&gt;,&lt;P&gt;タグの挙動を原作通りに修正。</li>
-            <li>一部メッセージウィンドウのスタイルを修正。</li>
+            <li>ランダム選択パーツが最初から配置されているマップでパスワードが使用不可になる不具合を修正。</li>
+        </ul>
+        <h2>W3.13bからW3.14への変更点</h2>
+        <ul>
+            <li>パスワードセーブを実装。</li>
+            <li>WWAが設置されているページで、WWAより上の要素にCSSでスタイルを指定した場合に、メッセージのレイアウトが崩れる問題を修正(W3.13cで修正)。</li>
+            <li>戦闘予測ウィンドウにも$colorを適用するように変更(W3.13cで修正)。</li>
+            <li>メッセージ中の&lt;C&gt;,&lt;P&gt;タグの挙動を原作通りに修正(W3.13cで修正)。</li>
+            <li>一部メッセージウィンドウのスタイルを修正(W3.13cで修正)。</li>
             <li>物を売るパーツによりゲームオーバーになった時にメッセージウィンドウが消えない不具合を修正(W3.13b++で修正)。</li>
             <li>戦闘が1フレームで終了する場合に戦闘ウィンドウが出ない問題を修正(W3.13b+で修正)。</li>
         </ul>
@@ -161,13 +164,11 @@
         </ul>
 
         <h2>次回予定</h2>
-        <ul>
-            <li>パスワードセーブ</li>
-            <li>超高速戦闘</li>
-        </ul>
+        <p>本家実装が一段落したので、もう少し考えてみることにします。</p>
         <h2>遠くない未来に更新予定</h2>
         <ul>
             <li>SuperQuickSave(仮)</li>
+            <li>超高速戦闘</li>
             <li>スコア表示Twitter連携機能</li>
             <li>スマートフォン・タブレット向けゲームパッド</li>
             <li>スマートフォン・タブレット向けviewport設定</li>
