--- a/caves02.html
+++ b/caves02.html
@@ -22,6 +22,7 @@
         <div id="wwa-wrapper" class="wwa-size-box"
              data-wwa-mapdata="caves02.dat"
              data-wwa-loader="wwaload.js"
+             data-wwa-audio="./audio/"
              data-wwa-urlgate-enable="true"
              data-wwa-title-img="cover.gif">
         </div>
