--- a/test.html
+++ b/test.html
@@ -22,7 +22,7 @@
         <div id="wwa-wrapper" class="wwa-size-box"
              data-wwa-mapdata="test.dat"
              data-wwa-loader="wwaload.js"
-             data-wwa-audio="./audio/"
+             data-wwa-audio-dir="./audio/"
              data-wwa-urlgate-enable="false"
              data-wwa-title-img="cover.gif">
         </div>
