--- a/dist_html/wwamap.html
+++ b/dist_html/wwamap.html
@@ -28,7 +28,7 @@
     </div>
     <footer id="copyright">
         <p> Internet RPG &quot;<a href="http://www.wwajp.com" class="wwa-copyright">World Wide Adventure</a>&quot; &copy;1996-2015 NAO</p>
-        <p> &quot;<a href="http://wwawing.com/" class="wwa-copyright">WWA Wing</a>&quot; &copy;2013-2015 Project Wing/Matsuyuki(rmn.)</p>
+        <p> &quot;<a href="http://wwawing.com/" class="wwa-copyright">WWA Wing</a>&quot; &copy;2013-2015 WWA Wing Team</p>
     </footer>
 </body>
 </html>
