バージョン番号表記更新(W3.14a=>W3.14b)

--- a/manual.html
+++ b/manual.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <div id="wrapper">
-        <h1>WWA Wing: 簡易マニュアル (ver. W3.14a)</h1>
+        <h1>WWA Wing: 簡易マニュアル (ver. W3.14b)</h1>
         <p><a href="http://wwawing.com">WWA Wing</a>( WWA In the Next Generation )は、<a href="http://wwajp.com">WWA</a>のJavaScript実装です。
         煩わしい警告は出ず、一部のスマートフォンでも動作します。
         正式なマニュアルは後ほどのリリースに添付予定です。</p>
@@ -108,17 +108,23 @@
             <li>ランダム選択パーツ</li>
         </ul>
         <p>WWA作成ツールは作者NAO氏の許可を得て再配布しております。また、WWA Debuggerは作者Aruneko氏の許可を得て再配布しております。</p>
+        <h2>W3.14aからW3.14bへの変更点</h2>
+        <ul>
+            <li>ランダム選択パーツが勝手に動き出す問題を修正。</li>
+            <li>ランダム選択パーツが置換される範囲を修正。</li>
+            <li>リスタート時にランダム選択が置換されない問題を修正。</li>
+        </ul>
         <h2>W3.14からW3.14aへの変更点</h2>
         <ul>
-          <li>メッセージ表示中にスペースキーを押すとスクロールされる問題を修正。</li>
-          <li>オーディオ関連ディレクトリの配置変更を配置変更可能に</li>
-          <li>WWA公式での<a href="http://wwajp.com/making.html">文字列ロードに関する不具合</a>への対応(W3.14++)</li>
-          <li>配布マップデータにパスワードがかかっている問題を修正(W3.14++)</li> 
-          <li>ランダム選択パーツが初期状態でマップ上に配置されている場合にパスワードセーブの互換性がなくなる問題を修正。(W3.14+)</li>
-          <li>パスワードセーブを実装(Java版との互換なし) (W3.14)</li>
-          <li>ジャンプゲート後に表示される画面領域を原作準拠に変更。(W3.14)</li>
-          <li>「物を売る」パーツで物体パーツ番号0番を売る場合の挙動を原作準拠に変更。(W3.14)</li>
-          <li>「物を売る」パーツの結果、アイテムが持てない場合、システムメッセージが反映されない不具合を修正。(W3.14)</li>
+            <li>メッセージ表示中にスペースキーを押すとスクロールされる問題を修正。(W3.14a)</li>
+            <li>オーディオ関連ディレクトリの配置変更を配置変更可能に(W3.14a)</li>
+            <li>WWA公式での<a href="http://wwajp.com/making.html">文字列ロードに関する不具合</a>への対応(W3.14++)</li>
+            <li>配布マップデータにパスワードがかかっている問題を修正(W3.14++)</li>
+            <li>ランダム選択パーツが初期状態でマップ上に配置されている場合にパスワードセーブの互換性がなくなる問題を修正。(W3.14+)</li>
+            <li>パスワードセーブを実装(Java版との互換なし) (W3.14)</li>
+            <li>ジャンプゲート後に表示される画面領域を原作準拠に変更。(W3.14)</li>
+            <li>「物を売る」パーツで物体パーツ番号0番を売る場合の挙動を原作準拠に変更。(W3.14)</li>
+            <li>「物を売る」パーツの結果、アイテムが持てない場合、システムメッセージが反映されない不具合を修正。(W3.14)</li>
         </ul>
         <h2>W3.13bからW3.13cへの変更点</h2>
         <ul>
