--- a/manual.html
+++ b/manual.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <div id="wrapper">
-        <h1>WWA Wing: 簡易マニュアル (ver. W3.14b)</h1>
+        <h1>WWA Wing: 簡易マニュアル (ver. W3.14b+)</h1>
         <p><a href="http://wwawing.com">WWA Wing</a>( WWA In the Next Generation )は、<a href="http://wwajp.com">WWA</a>のJavaScript実装です。
         煩わしい警告は出ず、一部のスマートフォンでも動作します。
         正式なマニュアルは後ほどのリリースに添付予定です。</p>
@@ -108,6 +108,10 @@
             <li>ランダム選択パーツ</li>
         </ul>
         <p>WWA作成ツールは作者NAO氏の許可を得て再配布しております。また、WWA Debuggerは作者Aruneko氏の許可を得て再配布しております。</p>
+        <h2>W3.14bからW3.14b+への変更点</h2>
+         <ul>
+            <li>特定の条件を満たすときに画像ファイル名のロードに失敗する問題を修正。</li>
+         </ul>
         <h2>W3.14aからW3.14bへの変更点</h2>
         <ul>
             <li>ランダム選択パーツが勝手に動き出す問題を修正。</li>
