--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
              data-wwa-mapdata="test.dat"
              data-wwa-loader="wwaload.js"
              data-wwa-audio-dir="./audio/"
-             data-wwa-urlgate-enable="false"
+             data-wwa-urlgate-enable="true"
              data-wwa-title-img="cover.gif">
         </div>
         <!-- /WWA -->
