--- a/manual.html
+++ b/manual.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <div id="wrapper">
-        <h1>WWA Wing: 簡易マニュアル (ver. W3.15a)</h1>
+        <h1>WWA Wing: 簡易マニュアル (ver. W3.15b)</h1>
         <p><a href="http://wwawing.com">WWA Wing</a>( WWA In the Next Generation )は、<a href="http://wwajp.com">WWA</a>のJavaScript実装です。
         煩わしい警告は出ず、一部のスマートフォンでも動作します。
         正式なマニュアルは後ほどのリリースに添付予定です。</p>
@@ -108,6 +108,11 @@
             <li>ランダム選択パーツ</li>
         </ul>
         <p>WWA作成ツールは作者NAO氏の許可を得て再配布しております。また、WWA Debuggerは作者Aruneko氏の許可を得て再配布しております。</p>
+        <h2>W3.15aからW3.15bへの変更点</h2>
+        <ul>
+            <li>マップデータバージョン2への対応</li>
+            <li>マップデータバージョンをバージョン情報各所に併記</li>
+        </ul>
         <h2>W3.15からW3.15aへの変更点</h2>
         <ul>
           <li><code>$face</code> マクロが正常に動作しない不具合を修正</li>
