Ver2.9系マップデータへの対応

--- a/manual.html
+++ b/manual.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <div id="wrapper">
-        <h1>WWA Wing: 簡易マニュアル (ver. W3.15b)</h1>
+        <h1>WWA Wing: 簡易マニュアル (ver. W3.15b+)</h1>
         <p><a href="http://wwawing.com">WWA Wing</a>( WWA In the Next Generation )は、<a href="http://wwajp.com">WWA</a>のJavaScript実装です。
         煩わしい警告は出ず、一部のスマートフォンでも動作します。
         正式なマニュアルは後ほどのリリースに添付予定です。</p>
@@ -108,10 +108,12 @@
             <li>ランダム選択パーツ</li>
         </ul>
         <p>WWA作成ツールは作者NAO氏の許可を得て再配布しております。また、WWA Debuggerは作者Aruneko氏の許可を得て再配布しております。</p>
-        <h2>W3.15aからW3.15bへの変更点</h2>
+        <h2>W3.15aからW3.15b+への変更点</h2>
         <ul>
-            <li>マップデータバージョン2への対応</li>
-            <li>マップデータバージョンをバージョン情報各所に併記</li>
+            <li>ライセンスファイルの著作権表記微修正(W3.15b+)</li>
+            <li>WWA V2.9でのマップデータ読み込み開始位置の修正(W3.15b+)</li>
+            <li>マップデータバージョン2への対応(W3.15b)</li>
+            <li>マップデータバージョンをバージョン情報各所に併記(W3.15b)</li>
         </ul>
         <h2>W3.15からW3.15aへの変更点</h2>
         <ul>
