--- a/hira_test.html
+++ b/hira_test.html
@@ -7,7 +7,28 @@
     <meta http-equiv="Expires" content="0" />
     <title>World Wide Adventure Wing</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
-
+    <style>
+      #vardump {
+        margin: 0 auto;
+      }
+      #vardump>table {
+        margin: 0 auto;
+        text-align: center;
+        width: 560px;
+      }
+      #vardump>table th.varlist-header {
+        background-color: orange;
+      }
+      #vardump>table tr.var-number>th {
+        background-color: #FFFF66;
+      }
+      #vardump>table tr.var-val>td {
+        background-color: #FFFFCC;
+      }
+      #vardump>table th, #vardump>table td {
+        width: 3em;
+      }
+    </style>
     <!--  WWA requirements-->
     <link rel="stylesheet" href="wwa.css" type="text/css" />
     <script src="cryptojs/aes.js"></script>
@@ -24,9 +45,12 @@
              data-wwa-loader="wwaload.js"
              data-wwa-audio-dir="./audio/"
              data-wwa-urlgate-enable="false"
-             data-wwa-title-img="cover.gif">
+             data-wwa-title-img="cover.gif"
+             data-wwa-var-dump-elm="#vardump">
         </div>
         <!-- /WWA -->
+    </div>
+    <div id="vardump">
     </div>
     <footer id="copyright">
         <p> Internet RPG &quot;<a href="http://www.wwajp.com" class="wwa-copyright">World Wide Adventure</a>&quot; &copy;1996-2016 NAO</p>
