とりあえず動くようになった(エラーメッセージは考慮していない)

--- a/wwamap.html
+++ b/wwamap.html
@@ -23,7 +23,7 @@
              data-wwa-mapdata="wwamap.dat"
              data-wwa-loader="wwaload.js"
              data-wwa-urlgate-enable="true"
-             data-wwa-title-img="cover.gif">
+             <!--data-wwa-title-img="cover.gif"-->>
         </div>
         <!-- /WWA -->
     </div>
