--- a/wwamap.html
+++ b/wwamap.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
 
     <!--  WWA requirements-->
-    <link rel="stylesheet" href="wwa.css" type="text/css" />
+    <link rel="stylesheet" href="wwa_classic.css" type="text/css" />
     <script src="cryptojs/aes.js"></script>
     <script src="audio/audio.min.js"></script>
     <script src="wwa.long.js"></script>
