--- a/wwamap.html
+++ b/wwamap.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
 
     <!--  WWA requirements-->
-    <link rel="stylesheet" href="wwa_classic.css" type="text/css" />
+    <link rel="stylesheet" href="wwa.css" type="text/css" />
     <script src="cryptojs/aes.js"></script>
     <script src="audio/audio.min.js"></script>
     <script src="wwa.long.js"></script>
@@ -23,7 +23,7 @@
              data-wwa-mapdata="wwamap.dat"
              data-wwa-loader="wwaload.js"
              data-wwa-urlgate-enable="true"
-             ><!--data-wwa-title-img="cover.gif"-->
+             data-wwa-title-img="cover.gif">
         </div>
         <!-- /WWA -->
     </div>
