--- a/wwamap_classic.html
+++ b/wwamap_classic.html
@@ -20,7 +20,7 @@
     <div id="wrapper">
         <!-- WWA -->
         <div id="wwa-wrapper" class="wwa-size-box"
-             data-wwa-mapdata="wwamap_skipsound.dat"
+             data-wwa-mapdata="wwamap.dat"
              data-wwa-loader="wwaload.js"
              data-wwa-urlgate-enable="true"
              data-wwa-classic-mode-enable="true">
