--- a/manual.html
+++ b/manual.html
@@ -36,10 +36,9 @@
 </head>
 <body>
     <div id="wrapper">
-        <h1>WWA Wing: 簡易マニュアル (ver. W3.15b++)</h1>
+        <h1>WWA Wing: 簡易マニュアル (ver. W3.15b+++)</h1>
         <p><a href="http://wwawing.com">WWA Wing</a>( WWA In the Next Generation )は、<a href="http://wwajp.com">WWA</a>のJavaScript実装です。
         煩わしい警告は出ず、一部のスマートフォンでも動作します。
-        正式なマニュアルは後ほどのリリースに添付予定です。</p>
 
         <h2>サーバにアップロードするファイルについて</h2>
         <p>下記の通りです。（下記のフォルダ構成は、通常配布版のzipファイルを解凍したものです）</p>
@@ -107,8 +106,9 @@
             <li>ランダム選択パーツ</li>
         </ul>
         <p>WWA作成ツールは作者NAO氏の許可を得て再配布しております。また、WWA Debuggerは作者Aruneko氏の許可を得て再配布しております。</p>
-        <h2>W3.15aからW3.15b++への変更点</h2>
+        <h2>W3.15aからW3.15b+++への変更点</h2>
         <ul>
+            <li>マップデータ最下端にいるモンスターの戦闘結果予測ができない不具合を修正(W3.15b+++)</li>
             <li>WWA PhoenixのHTTPS対応(W3.15b++)</li>
             <li>ライセンスファイルの著作権表記微修正(W3.15b+)</li>
             <li>WWA V2.9でのマップデータ読み込み開始位置の修正(W3.15b+)</li>
