--- a/manual.html
+++ b/manual.html
@@ -41,7 +41,7 @@
 <body>
     <div id="wrapper">
         <section>
-            <h1>WWA Wing: 簡易マニュアル (ver. W3.15b++)</h1>
+            <h1>WWA Wing: 簡易マニュアル (ver. W3.15b+++)</h1>
             <p><a href="http://wwawing.com">WWA Wing</a>( WWA In the Next Generation )は、<a href="http://wwajp.com">WWA</a>のJavaScript実装です。
             煩わしい警告は出ず、一部のスマートフォンでも動作します。
             正式なマニュアルは後ほどのリリースに添付予定です。</p>
@@ -131,6 +131,7 @@
                 <section>
                     <h3>W3.15aからW3.15b++への変更点</h3>
                     <ul>
+                        <li>マップデータ最下端にいるモンスターの戦闘結果予測ができない不具合を修正(W3.15b+++)</li>
                         <li>WWA PhoenixのHTTPS対応(W3.15b++)</li>
                         <li>ライセンスファイルの著作権表記微修正(W3.15b+)</li>
                         <li>WWA V2.9でのマップデータ読み込み開始位置の修正(W3.15b+)</li>
