クラシックモードのHTMLサンプル追加, wwa.js再生成

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <ul>
             <li><a href="test.html">テストマップ</a></li>
             <li><a href="wwamap.html">Standard Map</a></li>
+            <li><a href="wwamap-classic.html">Standard Map (カバー画像指定なし+Classic Mode)</a></li>
             <li><a href="island02.html">Fantasy Island</a>(<em>BGM音量注意</em>)</li>
             <li><a href="caves01.html">Cave Dungeon I</a>(<em>BGM音量注意</em>)</li>
             <li><a href="caves02.html">Cave Dungeon II</a>(<em>BGM音量注意</em>)</li>
