--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <li><a href="island02.html">Fantasy Island</a>(<em>BGM音量注意</em>)</li>
             <li><a href="caves01.html">Cave Dungeon I</a>(<em>BGM音量注意</em>)</li>
             <li><a href="caves02.html">Cave Dungeon II</a>(<em>BGM音量注意</em>)</li>
+            <li><a href="g002-302.html">追尾属性テスト(マップデータバージョン: 3.0)</a></li>
+            <li><a href="g002-310.html">追尾属性テスト(マップデータバージョン: 3.1)</li>
+
         </ul>
         <h2>使用ライブラリ</h2>
         <ul>
