--- a/manual.html
+++ b/manual.html
@@ -130,6 +130,7 @@
                 <h2>更新情報</h2>
                 <section>
                     <h3>W3.15bからW3.15cβ1への変更点</h3>
+                    <li>マップデータバージョンが3.0以下の場合 (作成ツールが3.02c以下で作成した場合)、追尾/逃げる属性の挙動を当時のWWAに合わせる (W3.15cβ1)</li>
                     <li>Classic Modeを実装(W3.15cβ1)</li>
                     <li>カバー画像未指定時に本家同様のWelcome To WWA! を表示するように変更(W3.15cβ1)</li>
                     <li>マップデータ最下端にいるモンスターの戦闘結果予測ができない不具合を修正(W3.15b+++)</li>
