--- a/manual.html
+++ b/manual.html
@@ -43,8 +43,7 @@
         <section>
             <h1>WWA Wing: 簡易マニュアル (ver. W3.15cβ1)</h1>
             <p><a href="http://wwawing.com">WWA Wing</a>( WWA In the Next Generation )は、<a href="http://wwajp.com">WWA</a>のJavaScript実装です。
-            煩わしい警告は出ず、一部のスマートフォンでも動作します。
-            正式なマニュアルは後ほどのリリースに添付予定です。</p>
+            煩わしい警告は出ず、一部のスマートフォンでも動作します。</p>
             
             <section>
                 <h2>サーバにアップロードするファイルについて</h2>
@@ -62,6 +61,7 @@
       +-- wwa.js - wwa本体です。本家のWWA.classに相当します。名前はHTML中のscript要素で変更できます。
       +-- wwaload.js - wwa.jsから起動するマップデータのローダです。名前は「起動するには」で紹介する「data-wwa-loader」属性で変更できます。
       +-- wwa.css - WWAの見栄えを調整するCSSファイルです。アップロードしないと見栄えがかなり大変なことになります。名前はHTML中のlink要素で変更できます。
+      +-- wwa_classic.css - wwa.cssのメッセージウィンドウを、WWA原作(Java版)風味に近づけたものです。こちらを指定する場合にはwwa.cssは不要です。
       +-- style.css - ページのWWAの部分以外の見栄えを調整するCSSファイルです。自由に編集してみてください。
       +-- cover.gif - タイトル画像です。
       +-- ***.dat - WWAのマップデータファイルです。
@@ -109,8 +109,8 @@
             <section>
                 <h2>注意</h2>
                 <p class="important">HTMLファイル, CSSファイルの文字コードはUTF-8(BOMなし)としてください。</p>
-                <p class="important">スマートフォンでもプレイできることはありますが、効果音/BGMは鳴りません。</p>
-                <p>現在、下記の機能の実装はありません。</p>
+                <p class="important">スマートフォンでもプレイできる場合がありますが、効果音/BGMは鳴りません。</p>
+                <p>下記機能については、本家WWAには実装されていますが、WWA Wingには実装されていません。</p>
                 <ul>
                     <li>アイテムエフェクト, マクロ<code>$effitem</code></li>
                 </ul>
@@ -119,18 +119,20 @@
                     <li>物体ジャンプゲートから物体ジャンプゲートにジャンプしたときのパーツメッセージ表示優先順位</li>
                     <li>ランダム選択パーツ</li>
                 </ul>
-                <p>下記は<code>data-classic-mode-enable</code>を<code>false</code>した場合に、異なる挙動をすることがあります。</p>
+                <p>下記は<code>data-classic-mode-enable</code>を<code>false</code>した場合に、異なる挙動をします。</p>
                 <ul>
                     <li>メッセージ表示中の物体パーツのアニメーション</li>
                 </ul>
-                <p>WWA作成ツールは作者NAO氏の許可を得て再配布しております。また、WWA Debuggerは作者Aruneko氏の許可を得て再配布しております。</p>
+                <p>WWA作成ツールは作者NAO氏の許可を得て再配布しております。</p>
             </section>
             
             <section>
                 <h2>更新情報</h2>
                 <section>
                     <h3>W3.15bからW3.15cβ1への変更点</h3>
+                    <li>wwa_classic.cssを追加 (W3.15cβ1)</li>
                     <li>マップデータバージョンが3.0以下の場合 (作成ツールが3.02c以下で作成した場合)、追尾/逃げる属性の挙動を当時のWWAに合わせる (W3.15cβ1)</li>
+                    <li>一部のシステムメッセージを本家準拠に変更(W3.15cβ1)</li>
                     <li>Classic Modeを実装(W3.15cβ1)</li>
                     <li>カバー画像未指定時に本家同様のWelcome To WWA! を表示するように変更(W3.15cβ1)</li>
                     <li>マップデータ最下端にいるモンスターの戦闘結果予測ができない不具合を修正(W3.15b+++)</li>
