--- a/wwamap-classic.html
+++ b/wwamap-classic.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
 
     <!--  WWA requirements-->
-    <link rel="stylesheet" href="wwa.css" type="text/css" />
+    <link rel="stylesheet" href="wwa_classic.css" type="text/css" />
     <script src="cryptojs/aes.js"></script>
     <script src="audio/audio.min.js"></script>
     <script src="wwa.long.js"></script>
@@ -28,6 +28,7 @@
         <!-- /WWA -->
     </div>
     <footer id="copyright">
+      <p>このページのCSSには wwa.css ではなく、wwa_classic.css が指定されています。このCSSファイルを指定すると、Java版WWAに近いメッセージウィンドウのスタイルが適用されます。</p>
       <p>このWWAには data-wwa-title-img 属性が指定されていません。指定されていない場合には、WWA本家(Ver3.10以下)風の 「Welcome To WWA」を表示します。</p>
       <p>このWWAには data-wwa-classic-mode-enable 属性に true が指定されています。このWWAはクラシックモードで動作しています。クラシックモードについては<a href="./manual.html">マニュアル</a>をご参照ください。</p>
 
