indexのタグが壊れていた

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="caves01.html">Cave Dungeon I</a>(<em>BGM音量注意</em>)</li>
             <li><a href="caves02.html">Cave Dungeon II</a>(<em>BGM音量注意</em>)</li>
             <li><a href="g002-302.html">追尾属性テスト(マップデータバージョン: 3.0)</a></li>
-            <li><a href="g002-310.html">追尾属性テスト(マップデータバージョン: 3.1)</li>
+            <li><a href="g002-310.html">追尾属性テスト(マップデータバージョン: 3.1)</a></li>
 
         </ul>
         <h2>使用ライブラリ</h2>
