--- a/manual.html
+++ b/manual.html
@@ -129,7 +129,8 @@
             <section>
                 <h2>更新情報</h2>
                 <section>
-                    <h3>W3.15bからW3.15cβ1への変更点</h3>
+                    <h3>W3.15bからW3.15cβ2への変更点</h3>
+                    <li>WWA PhoenixのWelcome To表示がクラシックになっていない問題を修正(W3.15cβ2)</li>
                     <li>wwa_classic.cssを追加 (W3.15cβ1)</li>
                     <li>マップデータバージョンが3.0以下の場合 (作成ツールが3.02c以下で作成した場合)、追尾/逃げる属性の挙動を当時のWWAに合わせる (W3.15cβ1)</li>
                     <li>一部のシステムメッセージを本家準拠に変更(W3.15cβ1)</li>
