--- a/manual.html
+++ b/manual.html
@@ -131,7 +131,8 @@
                 <section>
                     <h3>W3.15cからW3.15dβ2への変更点</h3>
                     <ul>
-                    <li>WWA PhoenixのWelcome To表示がクラシックになっていない問題を修正(W3.15cβ2→2017/8/29よりW3.15dβ2)</li>
+                    <li>β版とは異なる内容でW3.15cがリリースされたため、変更差分を取り込む。リリース予定のバージョンをW3.15dに変更(W3.15dβ2)</li>
+                    <li>WWA PhoenixのWelcome To表示がクラシックになっていない問題を修正(W3.15cβ2)</li>
                     <li>wwa_classic.cssを追加 (W3.15cβ1)</li>
                     <li>マップデータバージョンが3.0以下の場合 (作成ツールが3.02c以下で作成した場合)、追尾/逃げる属性の挙動を当時のWWAに合わせる (W3.15cβ1)</li>
                     <li>一部のシステムメッセージを本家準拠に変更(W3.15cβ1)</li>
