--- a/test.html
+++ b/test.html
@@ -28,6 +28,10 @@
         </div>
         <!-- /WWA -->
     </div>
+    <textarea>
+
+    </textarea>
+    <input type="text"></input>
     <footer id="copyright">
         <p> Internet RPG &quot;<a href="http://www.wwajp.com" class="wwa-copyright">World Wide Adventure</a>&quot; &copy;1996-2016 NAO</p>
         <p> &quot;<a href="http://wwawing.com/" class="wwa-copyright">WWA Wing</a>&quot; &copy;2013-2017 WWA Wing Team</p>
