--- a/manual.html
+++ b/manual.html
@@ -131,6 +131,7 @@
                 <section>
                     <h3>W3.15cからW3.15dβ2への変更点</h3>
                     <ul>
+
                     <li>β版とは異なる内容でW3.15cがリリースされたため、変更差分を取り込む。リリース予定のバージョンをW3.15dに変更(W3.15dβ2)</li>
                     <li>WWA PhoenixのWelcome To表示がクラシックになっていない問題を修正(W3.15cβ2)</li>
                     <li>wwa_classic.cssを追加 (W3.15cβ1)</li>
@@ -138,6 +139,7 @@
                     <li>一部のシステムメッセージを本家準拠に変更(W3.15cβ1)</li>
                     <li>Classic Modeを実装(W3.15cβ1)</li>
                     <li>カバー画像未指定時に本家同様のWelcome To WWA! を表示するように変更(W3.15cβ1)</li>
+                    <li>攻撃力をマクロ<code>$status</code>で変更した時にステータス欄に反映されない不具合を修正(W3.15c+)</li>
                     </ul>
                     <h3>W3.15bからW3.15cへの変更点</h3>
                     <ul>
