一部プレイページに viewport を設定し、センタリングのCSSを適用した

--- a/wwamap-classic.html
+++ b/wwamap-classic.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Cache-Control" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
+    <meta name="viewport" content="width=560px, inital-scale=1.0">
     <title>World Wide Adventure Wing</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
 
@@ -16,7 +17,7 @@
     <!-- /WWA requirements -->
 
 </head>
-<body>
+<body class="centering">
     <div id="wrapper">
         <!-- WWA -->
         <div id="wwa-wrapper" class="wwa-size-box"
