--- a/dist_html/caves02.html
+++ b/dist_html/caves02.html
@@ -1,34 +1,22 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="ja" xml:lang="ja">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Cache-Control" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8">
     <title>World Wide Adventure Wing</title>
-    <link rel="stylesheet" href="style.css" type="text/css" />
-
-    <!--  WWA requirements-->
-    <link rel="stylesheet" href="wwa.css" type="text/css" />
+    <link rel="stylesheet" href="style.css"/>
+    <!-- wwa requirements-->
+    <link rel="stylesheet" href="wwa.css"/>
     <script src="audio/audio.min.js"></script>
     <script src="wwa.js"></script>
-    <!-- /WWA requirements -->
-
-</head>
-<body>
+    <!-- /wwa requirements-->
+  </head>
+  <body>
     <div id="wrapper">
-        <!-- WWA -->
-        <div id="wwa-wrapper" class="wwa-size-box"
-             data-wwa-mapdata="caves02.dat"
-             data-wwa-loader="wwaload.js"
-             data-wwa-urlgate-enable="true"
-             data-wwa-title-img="cover.gif">
-        </div>
-        <!-- /WWA -->
+      <div class="wwa-size-box" id="wwa-wrapper" data-wwa-mapdata="caves02" data-wwa-loader="wwaloader.js" data-wwa-urlgate-enable="true" data-wwa-title-img="cover.gif"></div>
     </div>
     <footer id="copyright">
-        <p> Internet RPG &quot;<a href="http://www.wwajp.com" class="wwa-copyright">World Wide Adventure</a>&quot; &copy;1996-2015 NAO</p>
-        <p> &quot;<a href="http://wwawing.com/" class="wwa-copyright">WWA Wing</a>&quot; &copy;2013-2015 WWA Wing Team</p>
+      <p>Internet RPG &quot;<a class="wwa-copyright" href="http://wwajp.com/">World Wide Adventure</a>&quot; 1996-2016 &copy; NAO</p>
+      <p> &quot;<a class="wwa-copyright" href="https://wwawing.com/">WWA Wing</a>&quot; 2013-2018 &copy; WWA Wing Team</p>
     </footer>
-</body>
+  </body>
 </html>
