fix(make-wwapage): マップデータの拡張子が生成されない不具合

--- a/debug/g002-310.html
+++ b/debug/g002-310.html
@@ -13,11 +13,11 @@
   </head>
   <body>
     <div id="wrapper">
-      <div class="wwa-size-box" id="wwa-wrapper" data-wwa-mapdata="g002-310" data-wwa-loader="wwaloader.js" data-wwa-urlgate-enable></div>
+      <div class="wwa-size-box" id="wwa-wrapper" data-wwa-mapdata="g002-310.dat" data-wwa-loader="wwaloader.js" data-wwa-urlgate-enable="true" data-wwa-title-img="cover.gif"></div>
     </div>
     <footer id="copyright">
-      <p>Internet RPG &quot;<a class="wwa-copyright" href="http://wwajp.com">World Wide Adventure</a>&quot; 1996-2016 &copy; NAO</p>
-      <p> &quot;<a class="wwa-copyright" href="https://wwawing.com">WWA Wing</a>&quot; 2013-2018 &copy; WWA Wing Team</p>
+      <p>Internet RPG &quot;<a class="wwa-copyright" href="http://wwajp.com/">World Wide Adventure</a>&quot; 1996-2016 &copy; NAO</p>
+      <p> &quot;<a class="wwa-copyright" href="https://wwawing.com/">WWA Wing</a>&quot; 2013-2018 &copy; WWA Wing Team</p>
     </footer>
   </body>
 </html>
