--- a/dist_html/caves01.html
+++ b/dist_html/caves01.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div id="wrapper">
-      <div class="wwa-size-box" id="wwa-wrapper" data-wwa-mapdata="caves01.dat" data-wwa-loader="wwaloader.js" data-wwa-urlgate-enable="true" data-wwa-title-img="cover.gif"></div>
+      <div class="wwa-size-box" id="wwa-wrapper" data-wwa-mapdata="caves01.dat" data-wwa-loader="wwaload.js" data-wwa-urlgate-enable="true" data-wwa-title-img="cover.gif"></div>
     </div>
     <footer id="copyright">
       <p>Internet RPG &quot;<a class="wwa-copyright" href="http://wwajp.com/">World Wide Adventure</a>&quot; 1996-2016 &copy; NAO</p>
