refactor(assets): assetsのhtml整理

--- a/assets/html/dev/test.html
+++ b/assets/html/dev/test.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="wwa.css"/>
     <script src="cryptojs/aes.js"></script>
     <script src="audio/audio.min.js"></script>
-    <script src="wwa.js"></script>
+    <script src="wwa.long.js"></script>
     <!-- /wwa requirements-->
   </head>
   <body>
     <div id="wrapper">
-      <div class="wwa-size-box" id="wwa-wrapper" data-wwa-mapdata="g002-310.dat" data-wwa-loader="wwaloader.js" data-wwa-urlgate-enable="true" data-wwa-title-img="cover.gif"></div>
+      <div class="wwa-size-box" id="wwa-wrapper" data-wwa-mapdata="test.dat" data-wwa-loader="wwaload.js" data-wwa-urlgate-enable="true" data-wwa-title-img="cover.gif"></div>
     </div>
     <footer id="copyright">
       <p>Internet RPG &quot;<a class="wwa-copyright" href="http://wwajp.com/">World Wide Adventure</a>&quot; 1996-2016 &copy; NAO</p>
