--- a/wwamap.html
+++ b/wwamap.html
@@ -18,6 +18,25 @@
 
 </head>
 <body class="centering">
+    <div id="wwa-virtualpad-left">
+        <div class="virtualpad_move">
+            <button id="wwa-top-button">▲</button>
+            <button id="wwa-left-button">◀</button>
+            <button id="wwa-right-button">▶</button>
+            <button id="wwa-bottom-button">▼</button>
+        </div>
+    </div>
+    <div id="wwa-virtualpad-right">
+        <div class="virtualpad_speedcontrol">
+            <button id="wwa-i-button">I</button>
+            <button id="wwa-p-button">P</button>
+        </div>
+        <div class="virtualpad_select">
+            <button id="wwa-y-button">Y</button>
+            <button id="wwa-n-button">N</button>
+            <button id="wwa-m-button">M</button>
+        </div>
+    </div>
     <div id="wrapper">
         <!-- WWA -->
         <div id="wwa-wrapper" class="wwa-size-box"
