fix(manual): typo:

--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -135,7 +135,7 @@
                         <li>効果音読み込みなしでパスワードセーブした後、効果音読み込みありで起動した場合にBGMが復元されない不具合を修正</li>
                         <li>戦闘予測表示中にパーツのイベントが実行される不具合を修正</li>
                         <li>BGM <code>71.mp3</code>の音源が途中で途切れないように修正</li>
-                        <li>HTMLファイルの改行コードに統一, メモ帳で開いても改行が出るようにした</li>
+                        <li>HTMLファイルの改行コードをCRLFに統一, メモ帳で開いても改行が出るようにした</li>
                     </ul>
                     <h3>W3.15cからW3.15dβ2への変更点</h3>
                     <ul>
