--- a/packages/assets/html/dev/wwamap.html
+++ b/packages/assets/html/dev/wwamap.html
@@ -15,21 +15,21 @@
   <body class="centering">
     <div id="wwa-virtualpad-left">
         <div class="virtualpad_move">
-            <button id="wwa-top-button">▲</button>
+            <button id="wwa-up-button">▲</button>
             <button id="wwa-left-button">◀</button>
             <button id="wwa-right-button">▶</button>
-            <button id="wwa-bottom-button">▼</button>
+            <button id="wwa-down-button">▼</button>
         </div>
     </div>
     <div id="wwa-virtualpad-right">
         <div class="virtualpad_speedcontrol">
-            <button id="wwa-i-button">I</button>
-            <button id="wwa-p-button">P</button>
+            <button id="wwa-slow-button">I</button>
+            <button id="wwa-fast-button">P</button>
         </div>
         <div class="virtualpad_select">
-            <button id="wwa-y-button">Y</button>
-            <button id="wwa-n-button">N</button>
-            <button id="wwa-m-button">M</button>
+            <button id="wwa-enter-button">Y</button>
+            <button id="wwa-esc-button">N</button>
+            <button id="wwa-estimate-button">M</button>
         </div>
     </div>
     <div id="wrapper">
