バーチャルパッドのページにcenteringクラス指定を削除

--- a/packages/assets/html/dev/wwamap.html
+++ b/packages/assets/html/dev/wwamap.html
@@ -12,7 +12,7 @@
     <script src="wwa.long.js"></script>
     <!-- /wwa requirements-->
   </head>
-  <body class="centering">
+  <body>
     <div id="wwa-virtualpad-left">
         <div class="virtualpad_move">
             <button id="wwa-up-button">▲</button>
