HTMLのviewportにuser-scalableを追加、CSSにhas-virtualpadを追加、スタイルシートのデプロイ方法を変更

--- a/packages/assets/html/dev/wwamap.html
+++ b/packages/assets/html/dev/wwamap.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=560px, inital-scale=1.0">
+    <meta name="viewport" content="width=560px, inital-scale=1.0, user-scalable=no">
     <title>World Wide Adventure Wing</title>
     <link rel="stylesheet" href="style.css"/>
     <!-- wwa requirements-->
@@ -12,7 +12,7 @@
     <script src="wwa.long.js"></script>
     <!-- /wwa requirements-->
   </head>
-  <body>
+  <body class="has-virtualpad">
     <div id="wwa-virtualpad-left">
         <div class="virtualpad_move">
             <button id="wwa-up-button">▲</button>
