auto_rotate.js を作成

--- a/packages/assets/html/dev/wwamap.html
+++ b/packages/assets/html/dev/wwamap.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="wwa.css"/>
     <script src="cryptojs/aes.js"></script>
     <script src="audio/audio.min.js"></script>
+    <script src="auto_rotate.js"></script>
     <script src="wwa.long.js"></script>
     <!-- /wwa requirements-->
   </head>
