ボタンのスタイルを変更

--- a/packages/assets/html/dev/wwamap.html
+++ b/packages/assets/html/dev/wwamap.html
@@ -16,10 +16,10 @@
   <body class="has-virtualpad">
     <div id="wwa-virtualpad-left">
         <div class="virtualpad_move">
-            <button id="wwa-up-button">↑</button>
-            <button id="wwa-left-button">←</button>
-            <button id="wwa-right-button">→</button>
-            <button id="wwa-down-button">↓</button>
+            <button id="wwa-up-button">△</button>
+            <button id="wwa-left-button">◁</button>
+            <button id="wwa-right-button">▷</button>
+            <button id="wwa-down-button">▽</button>
         </div>
     </div>
     <div id="wwa-virtualpad-right">
