--- a/packages/assets/html/dev/wwamap-classic.html
+++ b/packages/assets/html/dev/wwamap-classic.html
@@ -5,7 +5,6 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Cache-Control" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <meta name="viewport" content="width=560px, inital-scale=1.0">
     <title>World Wide Adventure Wing</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
 
@@ -17,7 +16,7 @@
     <!-- /WWA requirements -->
 
 </head>
-<body class="centering">
+<body>
     <div id="wrapper">
         <!-- WWA -->
         <div id="wwa-wrapper" class="wwa-size-box"
