--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -130,6 +130,13 @@
             <section>
                 <h2>更新情報</h2>
                 <section>
+                    <h3>v3.1.6からv3.1.7への変更点</h3>
+                    <ul>
+                        <li>Java版WWAに実装されていた<code>$effitem</code>マクロを復活</li>
+                        <li>メッセージがマクロのみのスコア法事パーツでメッセージが消えない問題を修正</li>
+                        <li>メッセージの先頭にある空白文字(半角スペースなど)が表示されない問題を修正</li>
+                        <li>クラシックモードかつタイトル画像が指定されている場合のプログレスバースタイル表示スタイルを修正</li>
+                    </ul>
                     <h3>W3.15dβ2からv3.1.6への変更点</h3>
                     <ul>
                         <li>新しいビルド方式に移行</li>
