--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ja" xml:lang="ja">
 <head>
     <meta charset="UTF-8">
@@ -130,6 +130,11 @@
             <section>
                 <h2>更新情報</h2>
                 <section>
+                    <h3>v3.1.7からv3.1.8への変更点</h3>
+                    <ul>
+                        <li><code>$effect</code>マクロの最初の数字が<code>0</code>のとき(エフェクト終了)にフリーズする可能性がある不具合を修正</li>
+                        <li>WWA Wingの新しい作成ツールを同梱</li>
+                    </ul>
                     <h3>v3.1.6からv3.1.7への変更点</h3>
                     <ul>
                         <li>Java版WWAに実装されていた<code>$effitem</code>マクロを復活</li>
