--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -130,6 +130,10 @@
             <section>
                 <h2>更新情報</h2>
                 <section>
+                    <h3>v3.1.8からv3.1.9への変更点</h3>
+                    <ul>
+                        <li>WWA Wingの作成ツールをv3.1.7以前のものに変更</li>
+                    </ul>
                     <h3>v3.1.7からv3.1.8への変更点</h3>
                     <ul>
                         <li><code>$effect</code>マクロの最初の数字が<code>0</code>のとき(エフェクト終了)にフリーズする可能性がある不具合を修正</li>
