docs(manual): マニュアル更新

--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ja" xml:lang="ja">
 <head>
     <meta charset="UTF-8">
@@ -104,6 +104,9 @@
                     <dt><code>data-wwa-item-effect-enable</code>属性</dt>
                     <dd><code>false</code>を指定すると、アイテム取得時のエフェクトが無効になります。（マクロ文 <code>$effitem=0</code>を最初に実行することと等価）
                     指定しなかった場合は<code>true</code>になります。</dd>
+                    <dt><code>data-wwa-use-go-to-wwa</code>属性</dt>
+                    <dd><code>true</code>を指定すると、現在戦闘予測ボタン「Battle Report」が WWA公式サイトへの移動ボタン「GoTo WWA」（v3.1系以下やJava版WWAでのボタン）でに変更できます。
+                    指定しなかった場合は<code>false</code>になります。</dd>
                 </dl>
             </section>
 
