--- a/packages/assets/html/dev/index.html
+++ b/packages/assets/html/dev/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ja" xml:lang="ja">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -25,11 +25,10 @@
         </ul>
         <h2>使用ライブラリ</h2>
         <ul>
-            <li><a href="http://kolber.github.io/audiojs/">audio.js</a>(<a href="./audio/LICENSE.txt">ライセンス情報</a>)</li>
-            <li><a href="https://code.google.com/p/crypto-js/">CryptoJS</a>(<a href="https://code.google.com/p/crypto-js/wiki/License">ライセンス情報</a>)</li>
+            <li><a href="https://github.com/brix/crypto-js">CryptoJS</a>(<a href="https://github.com/brix/crypto-js/blob/develop/LICENSE">ライセンス情報</a>)</li>
         </ul>
         <p> Internet RPG &quot;<a href="http://www.wwajp.com">World Wide Adventure</a>&quot; &copy;1996-2016 NAO</p>
-        <p> &quot;<a href="http://wwawing.com/">WWA Wing</a>&quot; &copy;2013-2017 WWA Wing Team</p>
+        <p> &quot;<a href="http://wwawing.com/">WWA Wing</a>&quot; &copy;2013-2019 WWA Wing Team</p>
     </div>
 </body>
 </html>
