--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -40,7 +40,7 @@
         <section>
             <h1>WWA Wing: 簡易マニュアル</h1>
             <p><a href="http://wwawing.com">WWA Wing</a>( WWA In the Next Generation )は、<a href="http://wwajp.com">WWA</a>のJavaScript実装です。
-            煩わしい警告は出ず、一部のスマートフォンでも動作します。</p>
+            煩わしい警告は出ず、スマートフォンでも動作します。</p>
             
             <section>
                 <h2>サーバにアップロードするファイルについて</h2>
@@ -111,15 +111,11 @@
             <section>
                 <h2>注意</h2>
                 <p class="important">HTMLファイル, CSSファイルの文字コードはUTF-8(BOMなし)としてください。</p>
-                <p class="important">スマートフォンでもプレイできる場合がありますが、効果音/BGMは鳴りません。</p>
-                <p>下記機能については、本家WWAには実装されていますが、WWA Wingには実装されていません。</p>
-                <ul>
-                    <li>アイテムエフェクト, マクロ<code>$effitem</code></li>
-                </ul>
                 <p>下記の機能は本家とは異なる挙動をすることがあります。</p>
                 <ul>
                     <li>物体ジャンプゲートから物体ジャンプゲートにジャンプしたときのパーツメッセージ表示優先順位</li>
                     <li>ランダム選択パーツ</li>
+                    <li>マクロが実行されるタイミング</li>
                 </ul>
                 <p>下記は<code>data-wwa-classic-mode-enable</code>を<code>false</code>した場合に、異なる挙動をします。</p>
                 <ul>
@@ -131,9 +127,26 @@
             <section>
                 <h2>更新情報</h2>
                 <section>
+                    <h3>v3.1.9からv3.2.0への変更点</h3>
+                    <p class="important">本バージョンより、多くの環境で60FPSで動作すると思われます。60FPSの場合、ゲームの進行速度や歩行アニメーションの速度がこれまでの約1.2倍になるので注意してください。</p>
+                    <p class="important">WWA Phoenixのサポートは、v3.1.xをもって廃止されました。本バージョン以降、WWA Phoenixの提供はありませんのでご了承願います。</p>
+                    <ul>
+                        <li>iOS, Androidなどのスマートフォン系OSでも音が鳴るように変更 (利用できる場合は音源再生にWebAudioを使用するように)</li>
+                        <li>音声ファイルが存在しない場合もゲームが開始するように変更（不足がある場合、開発者ツールを開くことで不足しているサウンド番号を調べることができます)</li>
+                        <li>AudioJSの設置が不要に</li>
+                        <li>ゲームパッドに対応(各種ゲーム機のコントローラをUSBやBluetoothでPCに接続すると使えることがあります)</li>
+                        <li>描画の高速化</li>
+                        <li>スマートフォン向けにYes/Noボタンの拡大</li>
+                        <li><code>$parts</code>マクロの高速化</li>
+                        <li>Go To WWAボタンを先頭予測が可能な「Battle Report」ボタンに変更 (<code>data-wwa-use-go-to-wwa</code>属性を<code>true</code>に設定することでGo To WWAに戻せます)</li>
+                        <li>50FPSからrequestAnimationFrameによるフレーム呼び出しに変更。</li>
+                        <li>待ち時間の処理をフレーム単位の指定に変更</li>
+                        <li>FirefoxによるローカルでのHTMLオープン時に警告(alert)ダイアログが出ないように変更</li>
+                        <li>その他、開発上複雑になったコードの整理を実施。</li>
+                    </ul>
                     <h3>v3.1.8からv3.1.9への変更点</h3>
                     <ul>
-                        <li>WWA Wingの作成ツールをv3.1.7以前のものに変更</li>
+                        <li>WWA Wingの作成ツールをv3.1.7以前のものに変更(エンジンファイルの変更はありません)</li>
                     </ul>
                     <h3>v3.1.7からv3.1.8への変更点</h3>
                     <ul>
