docs(manual): サポートブラウザを明記

--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -142,6 +142,7 @@
                         <li>50FPSからrequestAnimationFrameによるフレーム呼び出しに変更。</li>
                         <li>待ち時間の処理をフレーム単位の指定に変更</li>
                         <li>FirefoxによるローカルでのHTMLオープン時に警告(alert)ダイアログが出ないように変更</li>
+                        <li>サポートブラウザを明記</li>
                         <li>その他、開発上複雑になったコードの整理を実施。</li>
                     </ul>
                     <h3>v3.1.8からv3.1.9への変更点</h3>
@@ -310,6 +311,24 @@
                         <li>wwa.js中のa要素(リンク)で、「wwa-copyright」クラスを持つものに触れたときに確認ダイアログを表示するように変更（このサンプルはアップデート版には含まれておりません。サンプルをご覧になりたい場合はフルパッケージ版をダウンロードしてください）。</li>
                     </ul>
                 </section>
+            </section>
+
+            <section>
+                <h2>サポートブラウザ</h2>
+                <h3>PC</h3>
+                OSは不問です。
+                <ul>
+                    <li>Microsoft Internet Explorer 11</li>
+                    <li>Microsoft Edge (最新版)</li>
+                    <li>Mozilla Firefox (最新版)</li>
+                    <li>Google Chrome/Chromium (最新版)</li>
+                    <li>Safari (最新版)</li>
+                </ul>
+                <h3>スマートフォン・タブレット</h3>
+                <ul>
+                    <li>Android 上の Google Chrome (最新版)</li>
+                    <li>iOS 上の Safari (最新版)</li>
+                </ul>
             </section>
             
             <section>
