fix(local): Firefox68対応

--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -77,7 +77,7 @@
                 </p>
                 <p>ローカルでテストしたい場合は、同梱の「wwa-server.exe」をご利用ください。<code>http://localhost:3000/</code>に続けて同じディレクトリのHTMLファイルをURLに指定するとテストプレイできます。 </p>
                 <p>例: <a href="http://localhost:3000/wwamap.html">http://localhost:3000/wwamap.html</a></p>
-                <p class="important">htmlファイルを直接クリックしても（Firefox以外では）動きません!!</p>
+                <p class="important">htmlファイルを直接クリックしても動きません!!</p>
             </section>
 
             <section>
@@ -127,6 +127,10 @@
             <section>
                 <h2>更新情報</h2>
                 <section>
+                    <h3>v3.2.0からv3.2.1への変更点</h3>
+                    <ul>
+                        <li>Firefox68以降、HTMLファイルをローカルで直接開いての起動ができなくなったことに伴う対応</li>
+                    </ul>
                     <h3>v3.1.9からv3.2.0への変更点</h3>
                     <p class="important">本バージョンより、多くの環境で60FPSで動作すると思われます。60FPSの場合、ゲームの進行速度や歩行アニメーションの速度がこれまでの約1.2倍になるので注意してください。</p>
                     <p class="important">WWA Phoenixのサポートは、v3.1.xをもって廃止されました。本バージョン以降、WWA Phoenixの提供はありませんのでご了承願います。</p>
