data-wwa-looking-around で自動回転を追加

--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -99,6 +99,9 @@
                     <dt><code>data-wwa-use-go-to-wwa</code>属性</dt>
                     <dd><code>true</code>を指定すると、現在戦闘予測ボタン「Battle Report」が WWA公式サイトへの移動ボタン「GoTo WWA」（v3.1系以下やJava版WWAでのボタン）でに変更できます。
                     指定しなかった場合は<code>false</code>になります。</dd>
+                    <dt><code>data-wwa-looking-around</code>属性</dt>
+                    <dd><code>false</code>を指定すると、ゲーム開始時やジャンプゲートのジャンプ後の無操作時にプレイヤーが回転しなくなります。
+                    指定しなかった場合は<code>true</code>になります。</dd>
                 </dl>
             </section>
 
