docs(manual): キャッシュのワークアラウンド

--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -122,6 +122,10 @@
                     <li>メッセージ表示中の物体パーツのアニメーション</li>
                 </ul>
                 <p>WWA作成ツールは作者NAO氏の許可を得て再配布しております。</p>
+                <p>
+                    wwa.jsを更新したにも関わらず、古いバージョンの挙動をする場合には、wwa.jsの名前をバージョンごとに変更し、script要素で読み込むwwa.jsのファイル名を変更すると解決できるかもしれません、
+                    将来的には、ブラウザにWWA Wingのエンジン本体をキャッシュさせない機構も検討したいと考えています。
+                </p>
             </section>
             
             <section>
