docs(manual): 更新内容記述

--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -127,6 +127,10 @@
             <section>
                 <h2>更新情報</h2>
                 <section>
+                    <h3>v3.2.1からv3.2.2への変更点</h3>
+                    <ul>
+                        <li><code>$imgframe</code>でアイテムボックスの背景を変更した後、アイテムを取得すると背景が一瞬デフォルトになる問題を修正</li>
+                    </ul>
                     <h3>v3.2.0からv3.2.1への変更点</h3>
                     <ul>
                         <li>Firefox68以降、HTMLファイルをローカルで直接開いての起動ができなくなったことに伴う対応</li>
