docs(manual): v3.2.9 出します

--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -129,9 +129,9 @@
             <section>
                 <h2>更新情報</h2>
                 <section>
-                    <h3>v3.2.2からv3.2.8への変更点</h3>
+                    <h3>v3.2.2からv3.2.9への変更点</h3>
                     <ul>
-                        <li>開発都合のリリースで、挙動の変更はありません。（wwa.css開発のscssへの移行とリリースの流れの見直しを行いました）</li>
+                        <li>挙動の変更はありません。（CSS開発のscssへの移行, リリースフローの見直し, マニュアル訂正など）</li>
                     </ul>
                     <h3>v3.2.1からv3.2.2への変更点</h3>
                     <ul>
